updated dark mode issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(232, 119, 71, 0.87);
-  background-color: #db7248;
+  color: #000000;
+  background-color: #edad81;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
